<resources>
    <string name="main_activity">MainActivity</string>
    <string name="app_name">121game</string>
    <string name="output_for_testing">0</string>
    <string name="init_hub">Create Game</string>
    <string name="init_spoke">Find Game</string>
    <string name="service_id">dd_service_id</string>
    <string name="Add_Character">Add Character</string>
    <string name="action_favorite">Add Character</string>
    <string name="New_Group">Make New Group</string>
    <string name="Select_Character">Select Character</string>
    <string name="Select_Group">Select Group</string>
    <string name="status">Welcome</string>
    <string name="status_connected">Connected.</string>
    <string name="status_searching">Searching...</string>
    <string name="status_waiting">Finding Players...</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_player_create">PlayerCreate</string>
    <string name="player_name">Player Name:</string>
    <string name="character_name">Character Name:</string>
    <string name="health">Health:</string>
    <string name="stats">Add Character</string>
    <string name="intellect">Intellect:</string>
    <string name="wisdom">Wisdom:</string>
    <string name="charisma">Charisma:</string>
    <string name="strength">Strength:</string>
    <string name="dexterity">Dexterity:</string>
    <string name="constitution">Constitution:</string>
    <string name="create_char_button">Create</string>
    <string name="updateDM">Send</string>
    <string name="pullFromDM">Receive</string>
    <string name="hostButton">Host</string>
    <string name="connectButton">Connect</string>
    <string name="splash_text">The Companion App</string>
    <string name="dd_logo_description">Splash Image</string>
</resources>
